email,password login, 404, error, loading, google signIn part done

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,8 @@
   <script>
     AOS.init();
   </script>
+  <!-- tailwind -->
+  <script src="./TW-ELEMENTS-PATH/dist/js/index.min.js"></script>
 </body>
 
 </html>
